--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,19 +20,9 @@
     <div class="large-6 large-offset-3 columns">
 
       <div class="content-section">
-
-        <p>
-Hello, there. I’m Abdul Rahman, a final year Computer Engineering student from the <a href="http://www.ceg.nus.edu.sg">National University of Singapore</a>. I have a comprehensive knowledge in both <b>computer architecture</b> as well as <b>software development</b>. My current focus is on research and development of <b>Machine Learning</b> based applications.
-        </p>
-
-       <!-- <p>
-In my spare time I like to <a href="https://connect.garmin.com/modern/profile/jami0821">kick up road dust</a> and pour down a few <a href="https://untappd.com/user/jami0821">craft brews</a>.
-        </p>
-
-        <p>
-I’m currently lending my brain to <a href="https://envato.com">Envato</a> as their Content Specialist for Web Templates.
-        </p>-->
-
+        {% for about in site.data.about %}
+        <p> {{about.description}}</p>
+        {% endfor %}
       </div>
 
       <main>
@@ -53,7 +43,7 @@ I’m currently lending my brain to <a href="https://envato.com">Envato</a> as t
 
 
         <!-- begin Project Experiences -->
-        <h4>Project Experience</h4>
+        <h4>Project Experiences</h4>
         {% for category in site.data.projects %}
           <div class="data">
             <h5>{{category.category}}</h5>
