--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,8 +29,6 @@ body {
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  text-align: justify;
-  text-justify: inter-word;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
@@ -96,6 +94,8 @@ ul {
 
 .content-section {
   margin-bottom: 4em;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .project-post {
@@ -109,4 +109,11 @@ ul {
 
 .content-section p {
   line-height: 2;
+}
+
+.data {
+  margin: 1.5rem 0;
+  p {
+    margin: 0.5rem 0;
+  }
 }
