--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,12 +63,12 @@
           <h4>{{skill.title}}</h4>
           <div class="data">
             <p>{{skill.remarks}}</p>
-            <h6>{{skill.description}}</h6>
+            <p>{{skill.description}}</p>
           </div>
         {% endfor %}
         <!-- Skills --> 
 
-        <!-- Work Experiences -->
+        <!-- Experiences -->
         {% for category in site.data.experience %}
           <h4>{{category.category}}</h4>
           {% for experience in category.experiences %}
@@ -81,21 +81,16 @@
             </div>
           {% endfor %}
         {% endfor %}
-        <!-- Work Experiences -->   
+        <!-- Experiences -->   
 
 
       </main>
 
       <footer>
-        <h2>Contact Me</h2>
-
-        <p>
-        Send me an <a href="mailto:jami0821@gmail.com?Subject=Hello,%20Jami!">email</a> or ping me on <a href="https://twitter.com/JamiGibbs">Twitter</a>. I’m also on <a href="https://github.com/jamigibbs">Github</a>, <a href="https://dribbble.com/JamiGibbs">Dribbble</a>, and <a href="https://www.linkedin.com/in/jami-gibbs-731985112
-">Linkedin</a> if you’re into that sort of thing.
-        </p>
-
+        <h4>Contact Me</h4>
+        <p>Send me an <a href="mailto:{{site.email}}">email</a> or ping me on <a href="{{ site.linkedin }}">Linked In</a>. Also, see my work on <a href="{{ site.github }}">Github</a>, and on <a href="{{ site.stackoverflow }}">Stackoverflow</a>.</p>
         <p class="copyright">
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
+        &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </p>
       </footer>
 
@@ -103,25 +98,14 @@
 
     <div class="large-2 large-offset-1 columns social">
       <ul>
-        <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i></a></li>
-        <li><a href="https://blog.jamigibbs.com/"><i class="fa fa-medium"></i></a></li>
-        <li><a href="https://dribbble.com/{{ site.dribbble }}"><i class="fa fa-dribbble"></i></a></li>
+        <li><a href="mailto:{{site.email}}"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="{{ site.github }}"><i class="fab fa-github"></i></a></li>
+        <li><a href="{{ site.linkedin }}"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="{{ site.stackoverflow }}"><i class="fab fa-stack-overflow"></i></a></li>
       </ul>
     </div>
 
   </div>
-
-    {% if site.google_analytics %}
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', '{{ site.google_analytics }}', 'auto');
-       ga('send', 'pageview');
-     </script>
-    {% endif %}
 
   </body>
 </html>
