--- a/styles.scss
+++ b/styles.scss
@@ -9,7 +9,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/foundation.css");
 
 //Font Awesome Icons
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css");
+@import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css");
+
 
 // Google Fonts
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
