--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,9 +10,11 @@ $yellow: #f4bf75;
 $green: #90a959;
 $cyan: #75b5aa;
 $blue: #268bd2;
-// $blue: #6a9fb5;
 $brown: #8f5536;
 $pink: #e74583;
+$teal-500: #009688;
+$teal-a700: #00BFA5;
+$light-teal: #EAFFFA;
 
 $root-font-family: 'Quicksand', sans-serif;
 $root-font-size: 22px;
