--- a/styles.scss
+++ b/styles.scss
@@ -5,14 +5,15 @@
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css");
 
-// Foundation
+//Foundation
 @import url("https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/foundation.css");
+//Bootstrap
 
 //Font Awesome Icons
 @import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css");
 
 
-// Google Fonts
+//Google Fonts
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 
 @import "variables";
