--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,58 +28,71 @@
       <main>
 
         <!-- Education -->
-        <h4>Education</h4>
-        {% for education in site.data.education %}
-          <div class="data">
-            <h6>{{ education.degree }}</h6>
-            <h6>{{ education.date }}</h6>
-            <p>{{education.uni}}</p>
-            {% for summary in education.summaries %}
-              <p>{{summary.description}}</p>
-            {% endfor %}
-          </div>
-        {% endfor %}
-        <!-- Education -->
-
-
-        <!-- Project Experiences -->
-        <h4>Project Experiences</h4>
-        {% for category in site.data.projects %}
-          <div class="data">
-            <h5>{{category.category}}</h5>
-            {% for project in category.projects %}
+        <input id="collapsible" class="toggle" type="checkbox">
+        <label for="collapsible" class="lbl-toggle" style="display: block; margin: 0;"><h4>Education</h4></label>
+        <div class="collapsible-content">
+          {% for education in site.data.education %}
             <div class="data">
-              <h6><a href="{{ project.url }}">{{ project.title }}</a></h6>
-              <h6>{{ project.date }}</h6>
-              <p>{{project.description}}</p>
-            </div>
-            {% endfor %}
-          </div>
-        {% endfor %}
-        <!-- Project Experiences -->        
-
-        <!-- Skills -->
-        {% for skill in site.data.skills %}
-          <h4>{{skill.title}}</h4>
-          <div class="data">
-            <p>{{skill.remarks}}</p>
-            <p>{{skill.description}}</p>
-          </div>
-        {% endfor %}
-        <!-- Skills --> 
-
-        <!-- Experiences -->
-        {% for category in site.data.experience %}
-          <h4>{{category.category}}</h4>
-          {% for experience in category.experiences %}
-            <div class="data">
-              <h6>{{ experience.title }}</h6>
-              <h6>{{ experience.duration }}</h6>
-              {% for summary in experience.summaries %}
+              <h6>{{ education.degree }}</h6>
+              <h6>{{ education.date }}</h6>
+              <p>{{education.uni}}</p>
+              {% for summary in education.summaries %}
                 <p>{{summary.description}}</p>
               {% endfor %}
             </div>
           {% endfor %}
+        </div>
+        <!-- Education -->
+
+
+        <!-- Project Experiences -->
+        <input id="collapsible1" class="toggle" type="checkbox">
+        <label for="collapsible1" class="lbl-toggle" style="display: block; margin: 0;"><h4>Project Experiences</h4></label>
+        <div class="collapsible-content">
+          {% for category in site.data.projects %}
+            <div class="data">
+              <h5>{{category.category}}</h5>
+              {% for project in category.projects %}
+              <div class="data">
+                <h6><a href="{{ project.url }}">{{ project.title }}</a></h6>
+                <h6>{{ project.date }}</h6>
+                <p>{{project.description}}</p>
+              </div>
+              {% endfor %}
+            </div>
+          {% endfor %}
+        </div>
+        <!-- Project Experiences -->        
+
+        <!-- Skills -->
+        <input id="collapsible2" class="toggle" type="checkbox">
+        <label for="collapsible2" class="lbl-toggle" style="display: block; margin: 0;"><h4>Skills</h4></label>
+        <div class="collapsible-content">
+          {% for skill in site.data.skills %}
+            <h4>{{skill.title}}</h4>
+            <div class="data">
+              <p>{{skill.remarks}}</p>
+              <p>{{skill.description}}</p>
+            </div>
+          {% endfor %}
+        </div>
+        <!-- Skills --> 
+
+        <!-- Experiences -->
+        {% for category in site.data.experience %}
+          <input id="{{category.category}}" class="toggle" type="checkbox">
+          <label for="{{category.category}}" class="lbl-toggle" style="display: block; margin: 0;"><h4>{{category.category}}</h4></label>
+          <div class="collapsible-content">
+            {% for experience in category.experiences %}
+              <div class="data">
+                <h6>{{ experience.title }}</h6>
+                <h6>{{ experience.duration }}</h6>
+                {% for summary in experience.summaries %}
+                  <p>{{summary.description}}</p>
+                {% endfor %}
+              </div>
+            {% endfor %}
+          </div>
         {% endfor %}
         <!-- Experiences -->   
 
@@ -88,7 +101,7 @@
 
       <footer>
         <h4>Contact Me</h4>
-        <p>Send me an <a href="mailto:{{site.email}}">email</a> or ping me on <a href="{{ site.linkedin }}">Linked In</a>. Also, see my work on <a href="{{ site.github }}">Github</a>, and on <a href="{{ site.stackoverflow }}">Stackoverflow</a>.</p>
+        <p>Send me an <a href="mailto:{{site.author.email}}">email</a> or ping me on <a href="{{ site.linkedin }}">Linked In</a>. Also, see my work on <a href="{{ site.github }}">Github</a>, and on <a href="{{ site.stackoverflow }}">Stackoverflow</a>.</p>
         <p class="copyright">
         &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </p>
@@ -98,7 +111,7 @@
 
     <div class="large-2 large-offset-1 columns social">
       <ul>
-        <li><a href="mailto:{{site.email}}"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="mailto:{{site.author.email}}"><i class="fas fa-envelope"></i></a></li>
         <li><a href="{{ site.github }}"><i class="fab fa-github"></i></a></li>
         <li><a href="{{ site.linkedin }}"><i class="fab fa-linkedin"></i></a></li>
         <li><a href="{{ site.stackoverflow }}"><i class="fab fa-stack-overflow"></i></a></li>
