Added Resume Download

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
 
       <footer>
         <h4>Contact Me</h4>
-        <p>Send me an <a href="mailto:{{site.author.email}}">email</a> or ping me on <a href="{{ site.linkedin }}">Linked In</a>. Also, see my work on <a href="{{ site.github }}">Github</a>, and on <a href="{{ site.stackoverflow }}">Stackoverflow</a>.</p>
+        <p>Here's my <a href="{{site.baseurl}}/public/AbdulRahmanCVW.pdf">resume</a>. Send me an <a href="mailto:{{site.author.email}}">email</a> or ping me on <a href="{{ site.linkedin }}">Linked In</a>. Also, see my work on <a href="{{ site.github }}">Github</a>, and on <a href="{{ site.stackoverflow }}">Stackoverflow</a>.</p>
         <p class="copyright">
         &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved.
         </p>
@@ -115,6 +115,7 @@
         <li><a href="{{ site.github }}"><i class="fab fa-github"></i></a></li>
         <li><a href="{{ site.linkedin }}"><i class="fab fa-linkedin"></i></a></li>
         <li><a href="{{ site.stackoverflow }}"><i class="fab fa-stack-overflow"></i></a></li>
+        <li><a href="{{ site.baseurl}}/public/AbdulRahmanCVW.pdf"><i class="fas fa-file-pdf"></i></a></li>
       </ul>
     </div>
 
