--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
   {% endif %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <base target="_blank">
 
   <title>
     {% if page.title == "Home" %}
