--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
         <!-- Education -->
         <input id="collapsible" class="toggle" type="checkbox">
-        <label for="collapsible" class="lbl-toggle" style="display: block; margin: 0;"><h4>Education</h4></label>
+        <label for="collapsible" class="lbl-toggle" tabindex="0" style="display: block; margin: 0;"><h4>Education</h4></label>
         <div class="collapsible-content">
           {% for education in site.data.education %}
             <div class="data">
@@ -47,7 +47,7 @@
 
         <!-- Project Experiences -->
         <input id="collapsible1" class="toggle" type="checkbox">
-        <label for="collapsible1" class="lbl-toggle" style="display: block; margin: 0;"><h4>Project Experiences</h4></label>
+        <label for="collapsible1" class="lbl-toggle" tabindex="0" style="display: block; margin: 0;"><h4>Project Experiences</h4></label>
         <div class="collapsible-content">
           {% for category in site.data.projects %}
             <div class="data">
@@ -66,7 +66,7 @@
 
         <!-- Skills -->
         <input id="collapsible2" class="toggle" type="checkbox">
-        <label for="collapsible2" class="lbl-toggle" style="display: block; margin: 0;"><h4>Skills</h4></label>
+        <label for="collapsible2" class="lbl-toggle" tabindex="0" style="display: block; margin: 0;"><h4>Skills</h4></label>
         <div class="collapsible-content">
           {% for skill in site.data.skills %}
             <h4>{{skill.title}}</h4>
@@ -81,7 +81,7 @@
         <!-- Experiences -->
         {% for category in site.data.experience %}
           <input id="{{category.category}}" class="toggle" type="checkbox">
-          <label for="{{category.category}}" class="lbl-toggle" style="display: block; margin: 0;"><h4>{{category.category}}</h4></label>
+          <label for="{{category.category}}" class="lbl-toggle" tabindex="0" style="display: block; margin: 0;"><h4>{{category.category}}</h4></label>
           <div class="collapsible-content">
             {% for experience in category.experiences %}
               <div class="data">
@@ -120,6 +120,8 @@
     </div>
 
   </div>
+
+  <script type="text/javascript">{% include collapsible.js %}</script>
 
   </body>
 </html>
