--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,7 +42,7 @@ a {
   &:hover,
   &:focus {
     color: $teal-a700;
-    text-decoration: none;
+    text-decoration: underline;
   }
 
   strong {
