--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,7 +34,7 @@ body {
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: $teal-500;
-  text-decoration: none;
+  text-decoration: underline;
   font-weight: bold;
   @include transition(color .2s ease-in-out);
 
